--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 dist: trusty
 language: ruby
 addons:
-  postgresql: 9.6
+  postgresql: 10.4
 before_script:
-  - bundle exec rails db:create RAILS_ENV=test
+  - bundle exec rails db:create db:schema:load RAILS_ENV=test
 script:
-  - bundle exec rails db:migrate RAILS_ENV=test
   - bundle exec rspec
