--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: ruby
 addons:
   postgresql: 10.4
 before_script:
-  - bundle exec rails db:create db:schema:load RAILS_ENV=test
+  - bundle exec rails db:create RAILS_ENV=test
+  - bundle exec rails db:schema:load RAILS_ENV=test
 script:
   - bundle exec rspec
