--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
 dist: trusty
 language: ruby
 addons:
-  postgresql: 10.4
+  postgresql: "10"
+  apt:
+    packages:
+    - postgresql-10
+    - postgresql-client-10
+env:
+  global:
+  - PGPORT=5433
 before_script:
   - bundle exec rails db:create RAILS_ENV=test
   - bundle exec rails db:schema:load RAILS_ENV=test
