--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ env:
   global:
   - PGPORT=5433
 before_script:
-  - bundle exec rails db:create RAILS_ENV=test
-  - bundle exec rails db:schema:load RAILS_ENV=test
+  - bundle exec rails db:create db:schema:load RAILS_ENV=test
 script:
   - bundle exec rspec
